Funcons-beta/Computations/Abnormal/Failing/tests/checked.config
general {
    funcon-term: 
      finalise-failing
      sequential(
        effect(checked(true)), print 1,
        else(effect(checked()), print 2),
        else(effect(checked(map-lookup(map(),1))), print 3),
        print(checked(map-lookup(map(tuple(0,1),tuple(1,4)),1)))
      )
        ;
}

tests {
    result-term: null-value;
    standard-out: [1, 2, 3, 4];
}
